upate index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <h2>Documents relatifs à la campagne parcours sup pour la candidature d'Elie Lou Lebre!</h2>
 <br/>
-Lettre de motivation 3500 caractères : 
-Video : 7 min : 
+<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/lettre-motivation-elie-lou-lebre.pdf"> Lettre de motivation 3500 caractères</a>
+<br/>
+<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/video-motivation-elie-lou-lebre.mp4"</a>  
+Video : 7 min 
+</a>
 <br/>
