ajout de la synthese des entretiens

--- a/index.html
+++ b/index.html
@@ -6,3 +6,6 @@
 Video : 7 min 
 </a>
 <br/>
+Communiquer pour valider mon choix d’une formation en communication : 
+<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/bilan-entrtiens-elie-lou-lebre.mp4"</a> une syntèse des entretiens réalisés</a>  ave des personnes du domaine. 
+<br/>
