--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@ Video : 7 min
 </a>
 <br/>
 Communiquer pour valider mon choix d’une formation en communication : 
-<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/bilan-entretiens-elie-lou-lebre.pdf"</a> une syntèse des entretiens réalisés</a>  ave des personnes du domaine. 
+<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/bilan-entretiens-elie-lou-lebre.pdf"</a> une synthèse des entretiens réalisés</a>  ave des personnes du domaine. 
 <br/>
