--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <h2>Documents relatifs à la campagne parcours sup pour la candidature d'Elie Lou Lebre!</h2>
 <br/>
-<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/lettre-motivation-elie-lou-lebre.pdf"> Lettre de motivation 3500 caractères</a>
+<!--<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/lettre-motivation-elie-lou-lebre.pdf"> Lettre de motivation 3500 caractères</a>-->
+Video en cours de finalisation.
 <br/>
 <a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/video-motivation-elie-lou-lebre.mp4"</a>  
 Video : 7 min 
