--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <h2>Documents relatifs à la campagne parcours sup pour la candidature d'Elie Lou Lebre!</h2>
 <br/>
-<!--<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/lettre-motivation-elie-lou-lebre.pdf"> Lettre de motivation 3500 caractères</a>-->
-Video en cours de finalisation.
+<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/lettre-motivation-elie-lou-lebre.pdf"> Lettre de motivation 3500 caractères</a>
 <br/>
-<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/video-motivation-elie-lou-lebre.mp4"</a>  
+<!--<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/video-motivation-elie-lou-lebre.mp4"</a> --> 
 Video : 7 min 
 </a>
+Video en cours de finalisation.
 <br/>
 Communiquer pour valider mon choix d’une formation en communication : 
 <a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/bilan-entretiens-elie-lou-lebre.pdf"</a> une synthèse des entretiens réalisés</a>  ave des personnes du domaine. 
