--- a/bts.html
+++ b/bts.html
@@ -1,5 +1,5 @@
 <h2>Synthèse des entretiens réalisés</h2>
 <br/>
 Communiquer pour valider mon choix d’une formation en communication : 
-<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/bilan-entretiens-elie-lou-lebre.pdf"> une synthèse des entretiens réalisés</a> avec des personnes du domaine (une étudiante en master, une responsable de communication d'un centre de recherche publique et la responsable de communication de la cité des congrés). 
+<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/bilan-entretiens-elie-lou-lebre.pdf"> une synthèse des entretiens réalisés</a> avec des personnes du domaine (une étudiante en master, une responsable de communication d'un centre de recherche publique sur Rennes et la responsable de communication de la Cité des Congrés sur Nantes). 
 <br/>
