--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <br/>
 <a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/lettre-motivation-elie-lou-lebre.pdf"> Lettre de motivation 3500 caractères</a>
 <br/>
-<!--<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/video-motivation-elie-lou-lebre.mp4"</a> --> 
-Video : 7 min 
+<a href="https://youtu.be/0LbXlSwNb2s"</a> 
+Video (lien youtube) 
 </a>
-Video en cours de finalisation.
+4 min 30 pour me présenter de manière un peu plus informelle !
 <br/>
 Communiquer pour valider mon choix d’une formation en communication : 
 <a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/bilan-entretiens-elie-lou-lebre.pdf"</a> une synthèse des entretiens réalisés</a>  ave des personnes du domaine. 
