--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@ Video (lien youtube)
 4 min 30 pour me présenter de manière un peu plus informelle !
 <br/>
 Communiquer pour valider mon choix d’une formation en communication : 
-<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/bilan-entretiens-elie-lou-lebre.pdf"</a> une synthèse des entretiens réalisés</a>  ave des personnes du domaine. 
+<a href="https://github.com/lebreelielou/lebreelielou.github.io/raw/master/bilan-entretiens-elie-lou-lebre.pdf"</a> une synthèse des entretiens réalisés</a>  avec des personnes du domaine. 
 <br/>
